# farm2.0

./: .gitignore  BUGFIXES_REPORT.md  DIAGNOSTICS.md  DIAGNOSTICS_REPORT.md  FUNCTIONALITY_TEST_REPORT.md  LOGS_ANALYSIS_REPORT.md  MVP_ROADMAP.md  NEXT_STEPS.md  PHASE2_IMPLEMENTATION.md  PROJECT_ANALYSIS_AND_ROADMAP.md  PROJECT_STATUS.md  PUSH_TO_GITHUB.md  README.md  REALTIME_DIAGNOSTICS.md  TESTING_COMPLETE_REPORT.md  TESTING_REPORT.md  TESTING_SUITE_REPORT.md  UX_IMPROVEMENTS.md  UX_IMPROVEMENTS_COMPLETED.md  docker-compose.yml  package-lock.json  setup_flutter_mobile.sh  setup_node_admin.sh
backend/: .env.example  ADMIN_CREDENTIALS.txt  MIGRATIONS.md  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1fc0d6e41579_add_favorites_view_history_and_ratings_.py  20251107_194241_initial_migration_all_models.py  96566c5df4f7_initial_migration.py  a3ecf158d3e0_fix_entitytype_enum_values_to_lowercase.py  a85bf57fa344_fix_userrole_enum_values_to_lowercase.py  ba6ef332b3ec_add_username_password_fields.py  fix_deliverystatus_enum_values_to_lowercase.py  fix_orderstatus_enum_values_to_lowercase.py  fix_productcategory_enum_values_to_lowercase.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: base.py  (+2 more)
backend/scripts/: check_admin_password.py  create_migration.py  create_migration.sh  generate_demo_data.py  test_admin_login.py  test_product_creation.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_deliveries.py  test_orders.py  test_payments.py  test_products.py
(+117 files in other folders)
