[tool.poetry]
name = "farm-backend"
version = "0.1.0"
description = "Farm-to-market platform backend"
authors = ["Team Farm"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
redis = "^5.0.4"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
ruff = "^0.4.3"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
